--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
+    "uuid": "^3.4.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -42,6 +43,8 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.14",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
     "eslint": "^7.32.0",
